--- a/bc_project_workflow/views/project_task_test_portal_template.xml
+++ b/bc_project_workflow/views/project_task_test_portal_template.xml
@@ -28,7 +28,7 @@
                                 <input type="hidden" name="test_id" t-att-value="test.id"/>
 
                                 <header class="modal-header">
-                                    <h4 class="modal-title">Refused Feedback</h4>
+                                    <h4 class="modal-title">Refused Test Feedback</h4>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </header>
 
