--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -4,11 +4,16 @@
         <field name="name">project.task.test.tree</field>
         <field name="model">project.task.test</field>
         <field name="arch" type="xml">
-                <tree string="Test">
+                <tree string="Test" decoration-success="valideted == 'accepted'" decoration-danger="valideted == 'refused'">
                     <field name="create_date" readonly="1"/>                            
                     <field name="name"/>                            
-                    <field name="description"/>                            
-                    <field name="valideted" readonly="1"/>                            
+                    <field name="summary"/>                            
+                    <field name="valideted" readonly="1"/>
+                    <field name="task_id" widget="many2one">
+                        <tree>
+                            <field name="name"/>
+                        </tree>
+                    </field>                                
                 </tree>
         </field>
     </record>
@@ -21,11 +26,12 @@
                     <group>
                         <field name="name"/>
                         <field name="create_date" readonly="1"/>
-                        <field name="task_id" readonly="1"/>
+                        <field name="task_id"/>
                         <field name="valideted"/>
+                        <field name="summary" readonly="1"/>
                     </group>
                     <notebook>
-                        <page string="Info">                              
+                        <page string="Test procedure">                              
                             <field name="description"/>                                
                         </page>
                         <page string="Refused Justify" invisible="valideted != 'refused'">                              
