--- a/bc_project_workflow/views/project_task_test_portal_template.xml
+++ b/bc_project_workflow/views/project_task_test_portal_template.xml
@@ -10,76 +10,78 @@
                 </tr>
             </thead>
             <tr t-foreach="task.test_ids" t-as="test">
-                <td><t t-esc="test.create_date" t-options='{"widget": "date"}'/></td> 
-                <td><t t-esc="test.name"/></td>
-                <t t-if="test.valideted == 'intest'">
-                    <td class="description" t-att-data-test-id="test.id">
-                    <a role="link" href="#" data-bs-toggle="modal" t-att-data-bs-target="'#modal_test_description_' + str(test.id)">
-                        <t t-esc="test.summary"/>
-                    </a>
-                    <div class="modal fade" t-att-id="'modal_test_description_' + str(test.id)" tabindex="-1" role="dialog">
-                        <div class="modal-dialog">
-                            <form method="POST" class="modal-content js_website_description_form description_form">
-                                <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
-                                <input type="hidden" name="test_id" t-att-value="test.id"/>
+                <t t-if="test.description">
+                    <td><t t-esc="test.create_date" t-options='{"widget": "date"}'/></td> 
+                    <td><t t-esc="test.name"/></td>
+                    <t t-if="test.valideted == 'intest'">
+                        <td class="description" t-att-data-test-id="test.id">
+                            <a role="link" href="#" data-bs-toggle="modal" t-att-data-bs-target="'#modal_test_description_' + str(test.id)">
+                                <t t-esc="test.summary"/>
+                            </a>
+                            <div class="modal fade" t-att-id="'modal_test_description_' + str(test.id)" tabindex="-1" role="dialog">
+                                <div class="modal-dialog">
+                                    <form method="POST" class="modal-content js_website_description_form description_form">
+                                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                                        <input type="hidden" name="test_id" t-att-value="test.id"/>
 
-                                <header class="modal-header">
-                                    <h4 class="modal-title">Consigne du Test</h4>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </header>
+                                        <header class="modal-header">
+                                            <h4 class="modal-title">Consigne du Test</h4>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </header>
 
-                                <main class="modal-body">
-                                    <div class="mb-3">
-                                        <div class="form-control" >
-                                            <t t-esc="test.description" />
-                                        </div>
-                                    </div>
-                                </main>
-                            </form>
-                        </div>
-                    </div>
-                    </td>
-                </t>
-                <t t-if="test.valideted != 'intest'">
-                    <td><t t-esc="test.summary"/></td>
-                </t>
-                <t t-if="test.valideted != 'intest'">
-                    <td><t t-esc="test.valideted"/></td>
-                </t>
-                <t t-if="test.valideted != 'accepted' and test.valideted != 'refused'">
-                    <td class="testing" t-att-data-test-id="test.id">
-                        <button href="#" class="btn btn-success accepted_test">
-                            <i class="fa fa-check"/>
-                        </button>
-                        <button href="#" class="btn btn-danger refused_test">
-                            <i class="fa fa-times"/>
-                        </button>
-                        <div class="modal fade modal_test_justify_refused" tabindex="-1" role="dialog">
-                            <div class="modal-dialog">
-                                <form method="POST" class="modal-content js_website_submit_form refused_partner_assign_form">
-                                    <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="test_id" t-att-value="test.id"/>
-
-                                    <header class="modal-header">
-                                        <h4 class="modal-title">Refused Test Feedback</h4>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </header>
-
-                                    <main class="modal-body">
-                                        <div class="mb-3">
-                                            <label for="comment_refused" class="col-form-label">Why are you refusing this test?</label>
-                                            <textarea name="comment" id="comment_refused" class="form-control"></textarea>
-                                        </div>
-                                    </main>
-
-                                    <footer class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                        <button type="submit" class="btn btn-danger">Submit Refused</button>
-                                    </footer>
-                                </form>
+                                        <main class="modal-body">
+                                            <div class="mb-3">
+                                                <div class="form-control" >
+                                                    <t t-esc="test.description" />
+                                                </div>
+                                            </div>
+                                        </main>
+                                    </form>
+                                </div>
                             </div>
-                        </div>
-                    </td>
+                        </td>
+                    </t>
+                    <t t-if="test.valideted != 'intest'">
+                        <td><t t-esc="test.summary"/></td>
+                    </t>
+                    <t t-if="test.valideted != 'intest'">
+                        <td><t t-esc="test.valideted"/></td>
+                    </t>
+                    <t t-if="test.valideted != 'accepted' and test.valideted != 'refused'">
+                        <td class="testing" t-att-data-test-id="test.id">
+                            <button href="#" class="btn btn-success accepted_test">
+                                <i class="fa fa-check"/>
+                            </button>
+                            <button href="#" class="btn btn-danger refused_test">
+                                <i class="fa fa-times"/>
+                            </button>
+                            <div class="modal fade modal_test_justify_refused" tabindex="-1" role="dialog">
+                                <div class="modal-dialog">
+                                    <form method="POST" class="modal-content js_website_submit_form refused_partner_assign_form">
+                                        <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                                        <input type="hidden" name="test_id" t-att-value="test.id"/>
+
+                                        <header class="modal-header">
+                                            <h4 class="modal-title">Refused Test Feedback</h4>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </header>
+
+                                        <main class="modal-body">
+                                            <div class="mb-3">
+                                                <label for="comment_refused" class="col-form-label">Why are you refusing this test?</label>
+                                                <textarea name="comment" id="comment_refused" class="form-control"></textarea>
+                                            </div>
+                                        </main>
+
+                                        <footer class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                            <button type="submit" class="btn btn-danger">Submit Refused</button>
+                                        </footer>
+                                    </form>
+                                </div>
+                            </div>
+                        </td>
+                    </t>
                 </t>
             </tr>
         </table>
