--- a/bc_project_workflow/views/project_task_views.xml
+++ b/bc_project_workflow/views/project_task_views.xml
@@ -9,10 +9,15 @@
                 <page name="testing_page" string="Testing">
                     <field name="test_ids">
                         <tree string="Test" widget="one2many" decoration-success="valideted == 'accepted'" decoration-danger="valideted == 'refused'" editable="bottom">
-                            <field name="create_date"/>                            
+                            <field name="create_date"/>
+                            <field name="validated_date" readonly="1"/>
+                            <field name="customer" readonly="1"/>                            
                             <field name="name"/>                            
-                            <field name="summary"/>                            
-                            <field name="valideted"/>                       
+                            <field name="description"/>                            
+                            <field name="valideted"/>
+                            <button class="fa fa-gears"
+                            name="button_test_modal"
+                            type="object"/>                      
                         </tree>
                     </field>
                 </page>
