--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -4,11 +4,10 @@
         <field name="name">project.task.test.tree</field>
         <field name="model">project.task.test</field>
         <field name="arch" type="xml">
-                <tree string="Test" decoration-success="valideted == 'accepted'" decoration-danger="valideted == 'refused'">
+                <tree string="Test" decoration-success="validated == 'accepted'" decoration-danger="validated == 'refused'">
                     <field name="create_date" readonly="1"/>                            
-                    <field name="name"/>                            
-                    <field name="summary"/>                            
-                    <field name="valideted" readonly="1"/>
+                    <field name="name"/>                          
+                    <field name="validated" readonly="1"/>
                     <field name="task_id" widget="many2one">
                         <tree>
                             <field name="name"/>
@@ -28,14 +27,13 @@
                         <field name="name"/>
                         <field name="create_date" readonly="1"/>
                         <field name="task_id"/>
-                        <field name="valideted"/>
-                        <field name="summary" readonly="1"/>
+                        <field name="validated"/>
                     </group>
                     <notebook>
                         <page string="Test procedure">                              
                             <field name="description"/>                                
                         </page>
-                        <page string="Refused Justify" invisible="valideted != 'refused'">                              
+                        <page string="Refused Justify" invisible="validated != 'refused'">                              
                             <field name="refused_justify" readonly="1"/>                                
                         </page>
                     </notebook>
