--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -36,7 +36,8 @@
                         </page>
                         <page string="Refused Justify" invisible="validated != 'refused'">
                             <field name="tags" widget="many2many_tags" readonly="1"/>                                
-                            <field name="refused_justify" readonly="1"/>                                
+                            <field name="refused_justify" readonly="1"/> 
+                            <field name="files" readonly="1"/>                               
                         </page>
                         <page string="Child Test" invisible="childtest_count == 0">                              
                             <field name="child_ids">
