--- a/bc_project_workflow/views/project_task_test_portal_template.xml
+++ b/bc_project_workflow/views/project_task_test_portal_template.xml
@@ -41,25 +41,21 @@
                             </div>
                         </td>
                     </t>
-                    <t t-if="test.validated != 'accepted' and test.validated != 'refused'">
-                        <td>
+                    <td>
+                        <t t-if="test.validated != 'accepted' and test.validated != 'refused'">
                             <owl-component name="submit_modal.SubmitModal" t-att-props="json.dumps({'test_id':test.id})"/>
-                        </td>
-                    </t>
-                    <t t-if="test.validated == 'accepted'">
-                        <td>
-                            <div style="display: flex; justify-content: center; color:green;">
+                        </t>
+                        <t t-if="test.validated == 'accepted'">
+                            <div style="display: flex; justify-content: center; color:green">
                                 <h6>Accepted</h6>
                             </div>
-                        </td>
-                    </t>
-                    <t t-if="test.validated == 'refused'">
-                        <td>
-                            <div style="display: flex; justify-content: center; color:red;">
+                        </t>
+                        <t t-if="test.validated == 'refused'">
+                            <div style="display: flex; justify-content: center; color:red">
                                 <h6>Refused</h6>
                             </div>
-                        </td>
-                    </t>
+                        </t>
+                    </td>
                 </t>
             </tr>
         </table>
