--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -1,21 +1,63 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record id="report_procedure_test" model="ir.actions.report">
+        <field name="name">Procedure Test Report</field>
+        <field name="model">project.task.test</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">bc_project_workflow.report_procedure_test_template</field>
+    </record>
+    
+    <template id="report_procedure_test_template">
+        <t t-name="bc_project_workflow.report_procedure_test_template">
+            <t t-call="web.html_container">
+                <t t-call="web.external_layout">
+                    <style>
+                        body {
+                            font-family: 'Arial', sans-serif;
+                            font-size: 16px;
+                        }
+                    </style>
+                    <t t-foreach="docs" t-as="doc">
+                        <div class="page">
+                        <div class="report-container">
+                            <header>
+                                <h2>Procedure Test Report</h2>
+                            </header>
+                            
+                            <section class="report-body">
+                                <p><strong>Name:</strong> <t t-esc="doc.name"/></p>
+                                    <p>Read by <t t-esc="doc.create_uid.name"/></p>
+                                    <p><strong>Description:</strong> 
+                                        <t t-if="doc.description">
+                                            <t t-out="doc.description"/>
+                                        </t>
+                                    </p>
+                            </section>
+                        </div>
+                    </div>
+                </t>
+                </t>
+            </t>
+        </t>
+    </template>
+
     <record id="view_test_tree" model="ir.ui.view">
         <field name="name">project.task.test.tree</field>
         <field name="model">project.task.test</field>
         <field name="arch" type="xml">
-                <tree string="Test" decoration-success="validated == 'accepted'" decoration-danger="validated == 'refused'">
-                    <field name="create_date" readonly="1"/>                            
-                    <field name="name"/>                          
-                    <field name="validated" readonly="1"/>
-                    <field name="task_id" widget="many2one">
-                        <tree>
-                            <field name="name"/>
-                        </tree>
-                    </field>                            
-                </tree>
+            <tree string="Test" decoration-success="validated == 'accepted'" decoration-danger="validated == 'refused'">
+                <field name="create_date" readonly="1"/>                            
+                <field name="name"/>                          
+                <field name="validated" readonly="1"/>
+                <field name="task_id" widget="many2one">
+                    <tree>
+                        <field name="name"/>
+                    </tree>
+                </field>                            
+            </tree>
         </field>
     </record>
+
     <record id="views_test_form" model="ir.ui.view">
         <field name="name">project.task.test.form</field>
         <field name="model">project.task.test</field>
@@ -29,17 +71,17 @@
                         <field name="validated"/>
                         <field name="parent_id" readonly="1" invisible="parent_id == False"/>
                         <field name="childtest_count" invisible="childtest_count == 0" readonly="1" />
+                        <button name="bc_project_workflow.report_procedure_test" string="Generate Report" type="action" class="btn-primary"/>
                     </group>
                     <notebook>
-                        <page string="Test procedure">                              
-                            <field name="description"/>                                
+                        <page string="Test procedure">               
+                            <field name="description"/>
                         </page>
                         <page string="Refused Justify" invisible="validated != 'refused'">
-                            <field name="tags" widget="many2many_tags" readonly="1"/>                                
+                            <field name="tags" widget="many2many_tags" readonly="1"/>
                             <field name="refused_justify" readonly="1"/> 
                             <field name="files" filename="file_name" readonly="1"/>
                             <field name="file_name" invisible="1"/>
-
                         </page>
                         <page string="Child Test" invisible="childtest_count == 0">                              
                             <field name="child_ids">
