--- a/bc_project_workflow/views/project_menu.xml
+++ b/bc_project_workflow/views/project_menu.xml
@@ -20,4 +20,11 @@
             parent="bc_project_workflow.menu_test"
             sequence="20">
     </menuitem>
+    <menuitem
+        name="Test template"
+        id="template"
+        action="test_template"
+        parent="project.menu_project_config"
+        sequence="1">
+    </menuitem>
 </odoo>
