--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -59,6 +59,16 @@
         </t>
     </template>
 
+    <record id="report_print_procedure" model="ir.actions.server">
+        <field name="name">Print Procedure</field>
+        <field name="model_id" ref="model_project_task_test"/>
+        <field name="binding_model_id" ref="model_project_task_test"/>
+        <field name="state">code</field>
+        <field name="code">
+            action=record.print_report()
+        </field>
+    </record>
+
     <record id="view_test_tree" model="ir.ui.view">
         <field name="name">project.task.test.tree</field>
         <field name="model">project.task.test</field>
@@ -91,7 +101,6 @@
                         <field name="validated"/>
                         <field name="parent_id" readonly="1" invisible="parent_id == False"/>
                         <field name="childtest_count" invisible="childtest_count == 0" readonly="1" />
-                        <button name="bc_project_workflow.report_procedure_test" string="Generate Report" type="action" class="btn-primary"/>
                     </group>
                     <notebook>
                         <page string="Test procedure">  
