--- a/bc_project_workflow/views/project_menu.xml
+++ b/bc_project_workflow/views/project_menu.xml
@@ -21,6 +21,13 @@
             sequence="20">
     </menuitem>
     <menuitem
+            name="Release"
+            id="release_menu"
+            action="release_action"
+            parent="project.menu_project_config"
+            sequence="1">
+    </menuitem>
+    <menuitem
         name="Test template"
         id="template"
         action="test_template"
